<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.esiea.mobile.lostpets.activity.InfosActivity">


    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:rowCount="3"
        android:columnCount="1"
        android:id="@+id/gridMainLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/tipsTitle"
            style="@style/text_title"
            android:id="@+id/text_title"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:textStyle="italic"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            android:text="@string/whoToContact"
            android:id="@+id/txt_whoToContact"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/tipsContent"
            android:id="@+id/txt_tipsContent"/>



    </GridLayout>

</RelativeLayout>
