<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:rowCount="4"
                android:columnCount="1"
                android:id="@+id/gridMainLayout">

                <Button
                    android:text="@string/lostMyPet"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="260dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    style="@style/text_button"
                    android:id="@+id/btn_lostMyPet"/>
                <Button
                    android:text="@string/findPet"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:minWidth="260dp"
                    style="@style/text_button"
                    android:id="@+id/btn_findPet"/>
                <Button
                    android:text="@string/lostPetsAroundMe"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:minWidth="260dp"
                    style="@style/text_button"
                    android:id="@+id/btn_lostPetsAroundMe"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:src="@drawable/main_picture"
                    android:id="@+id/pic_mainPicture"
                    android:contentDescription="mainPicture" />
            </GridLayout>

            <Button
                android:text="@string/infos"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                style="@style/text_button"
                android:id="@+id/btn_infos"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
