<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.esiea.mobile.lostpets.activity.TakePictureActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/row_img_pet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row_img_pet"
                android:id="@+id/txt_sharePicture"
                android:text="@string/shareLostPet"
                android:layout_marginBottom="50dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_sharePicture"
                android:id="@+id/txt_phone"
                android:text="@string/ownerPhoneNumber"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_ownerPhone"
                android:layout_marginBottom="30dp"
                android:layout_below="@+id/txt_phone"
                android:textIsSelectable="true"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharePicture"
                android:id="@+id/btn_sharePicture"
                style="@style/text_button"
                android:layout_below="@+id/txt_ownerPhone"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
