<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fgt_pet"
    tools:context=".PetActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="170dp"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/row_img_pet"/>

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_main"
                android:layout_below="@+id/row_img_pet">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_petInfos"
                    android:layout_marginEnd="70dp"
                    android:layout_marginRight="70dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_petName"
                        android:text="PetName"
                        android:textIsSelectable="true"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_race"
                        android:text="@string/race"
                        android:layout_below="@+id/row_lbl_petName"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_petRace"
                        android:text="Race"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_marginLeft="45dp"
                        android:layout_marginStart="45dp"
                        android:layout_alignTop="@+id/row_lbl_race"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_colour"
                        android:text="@string/colour"
                        android:layout_below="@+id/row_lbl_race"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_petColour"
                        android:text="Colour"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_marginLeft="60dp"
                        android:layout_marginStart="60dp"
                        android:layout_alignTop="@+id/row_lbl_colour"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_sex"
                        android:text="@string/sex"
                        android:layout_below="@+id/row_lbl_colour"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_petSex"
                        android:text="Sex"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_marginLeft="45dp"
                        android:layout_marginStart="45dp"
                        android:layout_alignTop="@+id/row_lbl_sex"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_tatoo"
                        android:text="@string/tatoo"
                        android:layout_marginBottom="20dp"
                        android:layout_below="@+id/row_lbl_sex"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_petTatoo"
                        android:text="Tatoo"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_marginLeft="70dp"
                        android:layout_marginStart="70dp"
                        android:layout_alignTop="@+id/row_lbl_tatoo"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/layout_petInfos"
                    android:layout_toRightOf="@+id/layout_petInfos">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_lostPoint"
                        android:text="@string/lostPoint"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_lostAddress"
                        android:text="Address"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_below="@+id/row_lbl_lostPoint"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_lostZipCode"
                        android:text="ZipCode"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_below="@+id/row_lbl_lostAddress"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_lostCity"
                        android:text="City"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_below="@+id/row_lbl_lostZipCode"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_ownerInfos"
                    android:layout_marginBottom="40dp"
                    android:layout_below="@+id/layout_petInfos">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_userFirstName"
                        android:text="FirstName"
                        android:textIsSelectable="true"
                        android:textStyle="bold"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_userLastName"
                        android:text="LastName"
                        android:textIsSelectable="true"
                        android:textStyle="bold"
                        android:layout_toRightOf="@+id/row_lbl_userFirstName"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_userAddress"
                        android:text="Address"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_below="@+id/row_lbl_userLastName"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_userZipCode"
                        android:text="ZipCode"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_below="@+id/row_lbl_userAddress"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_userCity"
                        android:text="City"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_below="@+id/row_lbl_userZipCode"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_lbl_userPhoneNumber"
                        android:text="Phone"
                        android:textIsSelectable="true"
                        android:textStyle="italic"
                        android:layout_below="@+id/row_lbl_userCity"/>
                </RelativeLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/btn_takePicture"
                    android:text="@string/takePicture"
                    android:layout_below="@+id/layout_ownerInfos"/>
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>